test/parser/compile_error/type_test_2.mj
program type_test

int A;
A a;
{
    void main() {}
}